# QCanvas

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CirqToQASM.py  Description.md  Description.txt  Dockerfile  LICENSE  OUT_OF_SCOPE_TASKS.md  PennyLanetoQASM.py  QUANTUM_VOLUME_FIX.md  QiskitToQASM.py  README.md  README.txt  SETUP_GUIDE.md  TODO.md  WINDOWS_SETUP.md  alembic.ini  append_new.py  aws-commands.txt  config.py  debug_output.txt  diagrams.txt  docker-compose.prod.yml  docker-compose.yml  environment.env  gate_syntax_reference.md  icon_mapping.md  implementation_plan_sprint2.md  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  read_logs.py  requirements.txt  run.sh  run_backend.py  run_frontend.bat  (+23 more)
Cirq-RAG-Code-Assistant/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKER_SETUP_SCENARIOS.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  QCANVAS_INTEGRATION_GUIDE.md  README.md  README_CONFIG.md  env.template  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-local.txt  requirements.txt  setup-dev.bat  setup-dev.ps1  setup-dev.sh  setup.py
Cirq-RAG-Code-Assistant/config/: README.md  __init__.py  config.json  config_loader.py
Cirq-RAG-Code-Assistant/config/ollama/: designer_agent.Modelfile  educational_agent.Modelfile  optimizer_agent.Modelfile  validator_agent.Modelfile
Cirq-RAG-Code-Assistant/data/: README.md
Cirq-RAG-Code-Assistant/data/datasets/: curated_cirq_snippets.jsonl  curated_designer_examples.jsonl  curated_educational_examples.jsonl
Cirq-RAG-Code-Assistant/data/knowledge_base/: curated_designer_examples.jsonl  curated_optimizer_examples.jsonl  curated_validator_examples.jsonl
Cirq-RAG-Code-Assistant/deploy/ecs/: README.md  cirq-agent.taskdef.json  execution-role-policy.json  task-role-policy.json
Cirq-RAG-Code-Assistant/docs/: README.md  architecture.md  deployment-aws.md  installation.md  integration.md  overview.md  quickstart.md  rubric.md  tech-stack.md
Cirq-RAG-Code-Assistant/docs/Research Paper/LaTeX Files/: references.bib
Cirq-RAG-Code-Assistant/docs/agents/: README.md  designer.md
Cirq-RAG-Code-Assistant/docs/api/: README.md
Cirq-RAG-Code-Assistant/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
Cirq-RAG-Code-Assistant/notebooks/: 01_preprocessing.ipynb  02_embeddings.ipynb  03_vector_store.ipynb  04_rag_system.ipynb  05_designer_agent.ipynb  06_optimizer_agent.ipynb  07_validator_agent.ipynb  08_educational_agent.ipynb  09_orchestration.ipynb  10_evaluation.ipynb  11_training.ipynb  12_visualization.ipynb  13_api_testing.ipynb  14_cli_testing.ipynb  README.md
Cirq-RAG-Code-Assistant/notebooks/outputs/cli_output/: test_circuit.py
Cirq-RAG-Code-Assistant/notebooks/outputs/reports/: evaluation_report_20251207_142640.json  evaluation_report_20251207_142640.text  evaluation_report_20251207_155811.json  evaluation_report_20251207_155811.text  evaluation_report_20251207_160815.json  evaluation_report_20251207_160815.text  evaluation_report_20251207_161752.json  evaluation_report_20251207_161752.text  evaluation_report_20251207_162459.json  evaluation_report_20251207_162459.text  evaluation_report_20251207_164155.json  evaluation_report_20251207_164155.text  evaluation_report_20251207_164827.json  evaluation_report_20251207_164827.text  evaluation_report_20251207_170621.json  evaluation_report_20251207_170621.text
Cirq-RAG-Code-Assistant/outputs/: README.md
Cirq-RAG-Code-Assistant/results/: mode_comparison_table.csv
Cirq-RAG-Code-Assistant/scripts/: fix_validator_mode.py  ingest_kb_to_pgvector.py  set_aws_env.cmd  set_aws_env.ps1  smoke_prod.py  test_ollama_model.py  test_validation_field.py  update_notebook_headers.py  validate_knowledge_base.py
Cirq-RAG-Code-Assistant/scripts/sql/: 001_init_pgvector.sql
Cirq-RAG-Code-Assistant/src/: agent_prompts.py  auth.py  run_history.py  server.py
Cirq-RAG-Code-Assistant/src/agents/: __init__.py  base_agent.py  designer.py  educational.py  optimizer.py  validator.py
Cirq-RAG-Code-Assistant/src/cirq_rag_code_assistant/: __init__.py  bedrock_client.py
Cirq-RAG-Code-Assistant/src/cirq_rag_code_assistant/config/: __init__.py  logging.py
Cirq-RAG-Code-Assistant/src/cli/: __init__.py  commands.py  main.py
Cirq-RAG-Code-Assistant/src/data/: __init__.py  dataset_loader.py  description_generator.py  fetcher.py  preprocessor.py
Cirq-RAG-Code-Assistant/src/evaluation/: __init__.py  ablation.py  benchmark.py  metrics.py  reports.py
Cirq-RAG-Code-Assistant/src/orchestration/: __init__.py  orchestrator.py  workflow_manager.py
Cirq-RAG-Code-Assistant/src/rag/: __init__.py  embeddings.py  fine_tuning.py  generator.py  knowledge_base.py  retriever.py  vector_store.py
Cirq-RAG-Code-Assistant/src/tools/: __init__.py  analyzer.py  compiler.py  qcanvas_client.py  simulator.py
Cirq-RAG-Code-Assistant/tests/: __init__.py  conftest.py  test_validator_circuits.py
Cirq-RAG-Code-Assistant/tests/integration/: test_pgvector_roundtrip.py
Cirq-RAG-Code-Assistant/tests/unit/: test_auth_api_key.py  test_basic.py  test_run_history.py  test_vector_store_pgvector.py
Test-2/: qsim.py  (+4 more)
quantum_simulator/: .gitignore  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt
quantum_simulator/.github/workflows/: pr-tests.yml
quantum_simulator/algorithms/: circuit_execution.py
quantum_simulator/core/: __init__.py  base_backend.py  density_matrix.py  stabilizer.py  statevector.py
quantum_simulator/qsim/: __init__.py
quantum_simulator/qsim/backends/: __init__.py  base.py  cirq.py  factory.py  pennylane.py  qiskit.py
quantum_simulator/qsim/core/: __init__.py  api.py  exceptions.py  types.py
quantum_simulator/qsim/qasm_parser/: __init__.py  allowed_nodes.py  ast_utils.py  parser.py  scope.py
quantum_simulator/qsim/visitors/: __init__.py  base_visitor.py  cirq_visitor.py  factory.py  pennylane_visitor.py  qiskit_visitor.py
quantum_simulator/tests/: cirq_test.py  pennylane_test.py  qiskit_test.py
(+3326 files in other folders)
