[metadata]
name = qcanvas-sdk
version = 0.1.2
description = QCanvas Python SDK (facade + runtime)
long_description = file: README.md
long_description_content_type = text/markdown
author = QCanvas contributors
license = MIT

[options]
packages = find:
package_dir =
    qcanvas = qcanvas
include_package_data = True
python_requires = >=3.8
install_requires =

[options.extras_require]
cirq =
    cirq>=1.0,<2
qiskit =
    qiskit>=0.45,<1
pennylane =
    pennylane>=0.34,<1
qsim =
    qsim>=0.1
all =
    cirq
    qiskit
    pennylane
    qsim

[options.packages.find]
include =
    qcanvas*
    quantum_converters*
exclude =
    tests*
    Test-Pypi-Imports*
